<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.KSTT.cosmos.autotests</groupId>
    <artifactId>cosmos-autotests</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>jar</packaging>

    <name>cosmos-autotests</name>

    <properties>
        <thucydides.version>0.9.275</thucydides.version>
        <selenium.version>2.47.2</selenium.version>
        <crm-version>5.2.6</crm-version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>net.thucydides</groupId>
            <artifactId>thucydides-core</artifactId>
            <version>${thucydides.version}</version>
            <exclusions>
                <exclusion>
                    <groupId>junit</groupId>
                    <artifactId>junit-dep</artifactId>
                </exclusion>
                <exclusion>
                    <artifactId>selenium-chrome-driver</artifactId>
                    <groupId>org.seleniumhq.selenium</groupId>
                </exclusion>
                <exclusion>
                    <artifactId>selenium-firefox-driver</artifactId>
                    <groupId>org.seleniumhq.selenium</groupId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.seleniumhq.selenium</groupId>
            <artifactId>selenium-java</artifactId>
            <version>${selenium.version}</version>
        </dependency>
        <dependency>
            <groupId>org.seleniumhq.selenium</groupId>
            <artifactId>selenium-firefox-driver</artifactId>
            <version>${selenium.version}</version>
        </dependency>
        <!--<dependency>-->
        <!--<groupId>org.seleniumhq.selenium</groupId>-->
        <!--<artifactId>selenium-chrome-driver</artifactId>-->
        <!--<version>${selenium.version}</version>-->
        <!--</dependency>-->
        <dependency>
            <groupId>net.thucydides</groupId>
            <artifactId>thucydides-jbehave-plugin</artifactId>
            <version>${thucydides.version}</version>
        </dependency>
        <dependency>
            <groupId>net.thucydides</groupId>
            <artifactId>thucydides-junit</artifactId>
            <version>${thucydides.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.11</version>
        </dependency>
        <dependency>
            <groupId>com.googlecode.json-simple</groupId>
            <artifactId>json-simple</artifactId>
            <version>1.1.1</version>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.14.8</version>
        </dependency>

        <dependency>
            <groupId>org.apache.httpcomponents</groupId>
            <artifactId>httpclient</artifactId>
            <version>4.3.5</version>
        </dependency>

        <dependency>
            <groupId>org.apache.httpcomponents</groupId>
            <artifactId>httpcore</artifactId>
            <version>4.3.3</version>
        </dependency>

        <!--dependency>
            <groupId>com.tradefxl</groupId>
            <artifactId>tradefxl-commons</artifactId>
            <version>${tradefxl-commons-version}</version>
        </dependency-->
        <dependency>
            <groupId>com.tradefxl</groupId>
            <artifactId>tradefxl-crm-connector</artifactId>
            <version>5.4.1</version>
            <exclusions>
                <exclusion>
                    <groupId>org.hibernate</groupId>
                    <artifactId>hibernate-core</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.hibernate</groupId>
                    <artifactId>hibernate-search-orm</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.springframework</groupId>
                    <artifactId>spring-asm</artifactId>
                </exclusion>
                <!--                <exclusion>
                    <groupId>org.samba.jcifs</groupId>
                    <artifactId>jcifs</artifactId>
                </exclusion>-->
            </exclusions>
        </dependency>

    </dependencies>

    <build>
        <plugins>
            <plugin>
                <artifactId>maven-failsafe-plugin</artifactId>
                <version>2.18.1</version>
                <configuration>
                    <includes>
                        <include>**/*TestSuite.*</include>
                    </includes>
                    <forkCount>3</forkCount>
                    <reuseForks>true</reuseForks>
                    <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
                    <testFailureIgnore>true</testFailureIgnore>
                    <systemPropertyVariables>
                        <webdriver.driver>${browser}</webdriver.driver>
                        <webdriver.chrome.driver>${browser.driver}</webdriver.chrome.driver>
                        <!--<webdriver.base.url>${webdriver.base.url}</webdriver.base.url>-->
                        <!--<webdriver.driver>${webdriver.driver}</webdriver.driver>-->
                        <!--<webdriver.remote.driver>${webdriver.remote.driver}</webdriver.remote.driver>-->
                        <!--<webdriver.remote.url>${webdriver.remote.url}</webdriver.remote.url>-->
                        <!--<story.timeout.in.secs>${story.timeout.in.secs}</story.timeout.in.secs>-->
                        <!--<thucydides.driver.capabilities>phantomjs.page.settings.userAgent:XXX/1.0</thucydides.driver.capabilities>-->
                        <!--<thucydides.driver.capabilities>phantomjs.page.settings.userAgent:Mozilla/5.0 (Windows NT 6.1) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/41.0.2228.0 Safari/537.36</thucydides.driver.capabilities>-->
                        <thucydides.take.screenshots>AFTER_EACH_STEP</thucydides.take.screenshots>
                        <thucydides.browser.width>1200</thucydides.browser.width>
                        <thucydides.browser.height>800</thucydides.browser.height>
                        <chrome.switches>-window-size=1200,800</chrome.switches>
                        <window-size>1200,800</window-size>
                    </systemPropertyVariables>

                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>integration-test</goal>
                            <goal>verify</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.2</version>
                <configuration>
                    <source>1.7</source>
                    <target>1.7</target>
                    <encoding>UTF-8</encoding>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <reporting>
        <plugins>
            <plugin>
                <groupId>net.thucydides.maven.plugins</groupId>
                <artifactId>maven-thucydides-plugin</artifactId>
                <version>${thucydides.version}</version>
            </plugin>
        </plugins>
    </reporting>

    <profiles>

        <profile>
            <id>windows</id>
            <activation>
                <os>
                    <family>windows</family>
                </os>
            </activation>
            <properties>
                <extension>.exe</extension>
            </properties>
        </profile>

        <profile>
            <id>linux</id>
            <activation>
                <os>
                    <family>linux</family>
                </os>
            </activation>
            <properties>
                <extension></extension>
            </properties>
        </profile>

        <profile>
            <id>firefox</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <properties>
                <browser>firefox</browser>
            </properties>
        </profile>

        <profile>
            <id>chrome</id>
            <properties>
                <browser>chrome</browser>
                <browser.driver>${basedir}/chromedriver/chromedriver${extension}</browser.driver>
            </properties>
        </profile>



        <!--<profile>-->
        <!--<id>SERVER_LOCAL</id>-->
        <!--<activation>-->
        <!--<activeByDefault>true</activeByDefault>-->
        <!--</activation>-->
        <!--<properties>-->
        <!--<webdriver.driver>chrome</webdriver.driver>-->
        <!--<webdriver.remote.driver>chrome</webdriver.remote.driver>-->
        <!--<webdriver.remote.url>http://127.0.0.1:4444/wd/hub</webdriver.remote.url>-->
        <!--<story.timeout.in.secs>6666</story.timeout.in.secs>-->
        <!--</properties>-->
        <!--</profile>-->

        <!--<profile>-->
        <!--<id>SERVER_REMOTE</id>-->
        <!--<properties>-->
        <!--<webdriver.driver>remote</webdriver.driver>-->
        <!--<webdriver.remote.driver>chrome</webdriver.remote.driver>-->
        <!--<webdriver.remote.url>http://ec2-54-172-158-188.compute-1.amazonaws.com:4444/wd/hub</webdriver.remote.url>-->
        <!--<story.timeout.in.secs>6666</story.timeout.in.secs>-->
        <!--</properties>-->
        <!--</profile>-->

        <!--<profile>-->
        <!--<id>LOCAL_PHANTOMJS</id>-->
        <!--<properties>-->
        <!--<webdriver.driver>phantomjs</webdriver.driver>-->
        <!--<webdriver.remote.driver/>-->
        <!--<webdriver.remote.url/>-->
        <!--<story.timeout.in.secs>6666</story.timeout.in.secs>-->
        <!--</properties>-->
        <!--</profile>-->
    </profiles>

    <repositories>
        <repository>
            <id>codehaus</id>
            <url>http://repository.codehaus.org/org/codehaus</url>
        </repository>
        <repository>
            <id>temp</id>
            <name>temp</name>
            <url>http://repository.opencastproject.org/nexus/content/repositories/public</url>
            <layout>default</layout>
        </repository>
        <repository>
            <id>cosmos-ext-release-local</id>
            <url>http://192.168.2.51/artifactory/ext-release-local</url>
        </repository>
        <repository>
            <id>cosmos-ext-snapshot-local</id>
            <url>http://192.168.2.51/artifactory/ext-snapshot-local</url>
        </repository>
        <repository>
            <id>cosmos-libs-release-local</id>
            <url>http://192.168.2.51/artifactory/libs-release-local</url>
        </repository>
        <repository>
            <id>cosmos-libs-snapshot-local</id>
            <url>http://192.168.2.51/artifactory/libs-snapshot-local</url>
        </repository>
        <repository>
            <id>ip-192-168-2-241-ext-release-local</id>
            <url>http://192.168.2.241:8081/artifactory/ext-release-local</url>
        </repository>
        <repository>
            <id>ip-192-168-2-241-libs-release-local</id>
            <url>http://192.168.2.241:8081/artifactory/libs-release-local</url>
        </repository>
    </repositories>
    <pluginRepositories>
        <pluginRepository>
            <id>cosmos-plugins-release-local</id>
            <url>http://192.168.2.51/artifactory/plugins-release-local</url>
        </pluginRepository>
        <pluginRepository>
            <id>cosmos-libs-release-local</id>
            <url>http://192.168.2.51/artifactory/libs-release-local</url>
        </pluginRepository>
        <pluginRepository>
            <id>cosmos-ext-release-local</id>
            <url>http://192.168.2.51/artifactory/ext-release-local</url>
        </pluginRepository>
        <pluginRepository>
            <id>cosmos-ext-snapshot-local</id>
            <url>http://192.168.2.51/artifactory/ext-snapshot-local</url>
        </pluginRepository>
    </pluginRepositories>

</project>
